fixed word spacing issue on login and signup page

--- a/static/style.css
+++ b/static/style.css
@@ -457,9 +457,9 @@ body {
     letter-spacing: 0.01em;
     float: left;
     color: white;
-    position: absolute;
-    left: 165px;
-
+    position: relative;
+    top: 48vh;
+    right: 16.5vw;
 }
 
 .slogan_login {
@@ -471,10 +471,11 @@ body {
     letter-spacing: 0.01em;
     float: left;
     color: white;
-    position: absolute;
-    left: 157px;
     opacity: 0.7;
-    top: 450px;
+    position: relative;
+    top: 60vh;
+    right: 30.5vw;
+
 }
 
 .create_account {
@@ -865,6 +866,7 @@ body {
 }
 
 .delete {
+    color: white;
     height: 20px;
     display: inline;
     border: 0px solid;
@@ -986,4 +988,12 @@ a {
     position: relative;
     bottom: 68px;
     text-align: center;
+}
+
+.logo_words_container {
+    top: 20px;
+    box-shadow: 4px 8px solid white;
+    display: inline;
+
+    height: 200px;
 }
